ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail116.hs
module ShouldFail where

-- in Haskell 98, methods must mention the class variable
-- (SourceForge bug #756454).
class Foo a where
    bug :: ()
